[package]
name = "graphql-field-timer"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
console = "0.15.0"
graphql-parser = "0.4.0"
hyper = { version = "0.14.19", features = ["client", "http1", "http2"] }
indicatif = "0.16.2"
itertools = "0.10.3"
lazy_static = "1.4.0"
rustls = "0.20.6"
rustls-native-certs = "0.6.2"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
structopt = "0.3.26"
tokio = { version = "1.19.2", features = ["net", "rt-multi-thread", "macros"] }
tokio-rustls = "0.23.4"

[features]
